修复了未将Mesh顶点转换到世界坐标系下的问题。下一步使用ImGui丰富一下界面的信息显示

--- a/project_test/project/imgui.ini
+++ b/project_test/project/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=941,533
-Size=550,550
+Pos=683,98
+Size=801,956
 Collapsed=0
 
 [Window][按钮窗口]
@@ -20,11 +20,96 @@ Collapsed=0
 
 [Window][浜や簰绐楀彛]
 Pos=69,67
-Size=521,268
+Size=526,323
 Collapsed=0
 
 [Window][交互窗口]
 Pos=60,60
 Size=368,265
 Collapsed=0
+
+[Table][0x47600645,3]
+RefScale=30
+Column 0  Width=133
+Column 1  Width=96
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=30
+Column 0  Width=96
+Column 1  Width=96
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x64418101,3]
+RefScale=30
+Column 0  Width=125
+Column 1  Width=96
+Column 2  Width=96
+
+[Table][0xC9935533,3]
+Column 0  Weight=0.6926
+Column 1  Weight=1.3074
+Column 2  Weight=1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=30
+Column 0  Width=96
+Column 1  Width=96
+Column 2  Width=96
+
+[Table][0x45A0E60D,7]
+RefScale=30
+Column 0  Width=79
+Column 1  Width=178
+Column 2  Width=178
+Column 3  Width=178
+Column 4  Width=178
+Column 5  Width=178
+Column 6  Width=178
+
+[Table][0x49F8DCEA,3]
+RefScale=30
+Column 0  Weight=1.0000
+Column 1  Width=192
+Column 2  Width=288
+
+[Table][0x20DF7A63,4]
+RefScale=30
+Column 0  Width=54 Sort=0v
+Column 1  Width=89
+Column 2  Width=71
+Column 3  Weight=1.0000
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA43C3885,3]
+RefScale=30
+Column 0  Width=80
+Column 1  Width=80
+Column 2  Width=80
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=30
+Column 0  Width=107
+Column 1  Width=107
+Column 2  Width=107
 
