定义一个InputManager类替换原本的interaction.cpp，但是不知道什么原因导致ImGui的控件无法交互

--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="imgui\misc\cpp\imgui_stdlib.cpp" />
+    <ClCompile Include="InputManager.hpp" />
     <ClCompile Include="interaction.cpp" />
     <ClCompile Include="Shader.hpp" />
     <ClCompile Include="utils.cpp" />
