重构交互逻辑，并实现了一些基本的几何体信息显示

--- a/project_test/project/imgui.ini
+++ b/project_test/project/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=683,98
-Size=801,956
+Pos=1177,1165
+Size=693,890
 Collapsed=0
 
 [Window][按钮窗口]
@@ -19,8 +19,8 @@ Size=280,139
 Collapsed=0
 
 [Window][浜や簰绐楀彛]
-Pos=69,67
-Size=526,323
+Pos=987,237
+Size=515,705
 Collapsed=0
 
 [Window][交互窗口]
@@ -112,4 +112,9 @@ RefScale=30
 Column 0  Width=107
 Column 1  Width=107
 Column 2  Width=107
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
 
