--- a/test_imgui/test_imgui/imgui.ini
+++ b/test_imgui/test_imgui/imgui.ini
@@ -4,7 +4,54 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=654,130
-Size=686,772
+Pos=572,31
+Size=547,918
 Collapsed=0
+
+[Table][0x49F8DCEA,3]
+RefScale=23
+Column 0  Weight=1.0000
+Column 1  Width=156
+Column 2  Width=234
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x20DF7A63,4]
+RefScale=23
+Column 0  Width=41 Sort=0v
+Column 1  Width=69
+Column 2  Width=54
+Column 3  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=23
+Column 0  Width=206
+Column 1  Width=264
+Column 2  Width=74
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0026
+Column 1  Weight=0.6582
+Column 2  Weight=1.3393
+
+[Table][0x47600645,3]
+RefScale=23
+Column 0  Width=74
+Column 1  Width=74
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=23
+Column 0  Width=74
+Column 1  Width=74
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
 
