--- a/test_imgui/test_imgui/imgui.ini
+++ b/test_imgui/test_imgui/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=572,31
-Size=547,918
+Size=700,896
 Collapsed=0
 
 [Table][0x49F8DCEA,3]
@@ -32,7 +32,7 @@ Column 3  Weight=1.0000
 [Table][0x64418101,3]
 RefScale=23
 Column 0  Width=206
-Column 1  Width=264
+Column 1  Width=139
 Column 2  Width=74
 
 [Table][0xC9935533,3]
@@ -54,4 +54,45 @@ Column 2  Width=-1
 Column 3  Weight=1.0000
 Column 4  Weight=1.0000
 Column 5  Weight=-1.0000
+
+[Table][0xDA36A7E0,6]
+RefScale=23
+Column 0  Width=41 Sort=0v
+Column 1  Width=69
+Column 2  Width=95
+Column 3  Width=91
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0xA43C3885,3]
+RefScale=23
+Column 0  Width=61
+Column 1  Width=61
+Column 2  Width=61
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=23
+Column 0  Width=74
+Column 1  Width=74
+Column 2  Width=74
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x45A0E60D,7]
+RefScale=23
+Column 0  Width=60
+Column 1  Width=137
+Column 2  Width=137
+Column 3  Width=137
+Column 4  Width=137
+Column 5  Width=137
+Column 6  Width=137
 
