调整了Shader的绑定逻辑，将其加入到Scene的GeometryRenderInfo中，物体默认绑定default着色器，而在imGui的下拉列表选中时替换为wired着色器，以实现选中对象的高亮

--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -191,6 +191,9 @@
     <None Include="shader\radiantFlux.gcs" />
     <None Include="shader\shader.gfs" />
     <None Include="shader\shader.gvs" />
+    <None Include="shader\wired.gfs" />
+    <None Include="shader\wired.ggs" />
+    <None Include="shader\wired.gvs" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="texture\leaf.jpg" />
