--- a/project_test/project/template.vcxproj.filters
+++ b/project_test/project/template.vcxproj.filters
@@ -181,6 +181,15 @@
     <None Include="shader\radiantFlux.gcs">
       <Filter>资源文件\shader</Filter>
     </None>
+    <None Include="shader\wired.gfs">
+      <Filter>资源文件\shader</Filter>
+    </None>
+    <None Include="shader\wired.ggs">
+      <Filter>资源文件\shader</Filter>
+    </None>
+    <None Include="shader\wired.gvs">
+      <Filter>资源文件\shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="texture\leaf.jpg">
