使用帧缓冲生成了id纹理，但是不知道怎么将其指定位置的单个像素读出来

--- a/project_test/project/template.vcxproj.filters
+++ b/project_test/project/template.vcxproj.filters
@@ -190,6 +190,18 @@
     <None Include="shader\wired.gvs">
       <Filter>资源文件\shader</Filter>
     </None>
+    <None Include="shader\idMapping.gfs">
+      <Filter>资源文件\shader</Filter>
+    </None>
+    <None Include="shader\idMapping.gvs">
+      <Filter>资源文件\shader</Filter>
+    </None>
+    <None Include="shader\screen.gfs">
+      <Filter>资源文件\shader</Filter>
+    </None>
+    <None Include="shader\screen.gvs">
+      <Filter>资源文件\shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="texture\leaf.jpg">
