--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -174,6 +174,8 @@
   <ItemGroup>
     <None Include="shader\depthmap.gfs" />
     <None Include="shader\depthmap.gvs" />
+    <None Include="shader\idMapping.gfs" />
+    <None Include="shader\idMapping.gvs" />
     <None Include="shader\leaf.gfs" />
     <None Include="shader\leaf.gvs" />
     <None Include="shader\lightShader.gfs" />
@@ -189,6 +191,8 @@
     <None Include="shader\plane.gfs" />
     <None Include="shader\plane.gvs" />
     <None Include="shader\radiantFlux.gcs" />
+    <None Include="shader\screen.gfs" />
+    <None Include="shader\screen.gvs" />
     <None Include="shader\shader.gfs" />
     <None Include="shader\shader.gvs" />
     <None Include="shader\wired.gfs" />
