--- a/Lsystem_test/Lsystem_test/Lsystem_test.vcxproj
+++ b/Lsystem_test/Lsystem_test/Lsystem_test.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="demo.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="LSystem.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
