--- a/Lsystem_test/Lsystem_test/Lsystem_test.vcxproj.filters
+++ b/Lsystem_test/Lsystem_test/Lsystem_test.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="demo.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="LSystem.hpp">
+      <Filter>头文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
