将代码封装到类中，但是经过调试出现报错，尚未解决

--- a/Lsystem_test/Lsystem_test/Lsystem_test.vcxproj
+++ b/Lsystem_test/Lsystem_test/Lsystem_test.vcxproj
@@ -128,9 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="demo.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LSystem.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
