--- a/Lsystem_test/Lsystem_test/Lsystem_test.vcxproj.filters
+++ b/Lsystem_test/Lsystem_test/Lsystem_test.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="LSystem.hpp">
       <Filter>头文件</Filter>
     </ClCompile>
+    <ClCompile Include="utils.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="utils.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
